--- a/frontend/javascripts/app/views/experiment/create-testkit-experiment.html
+++ b/frontend/javascripts/app/views/experiment/create-testkit-experiment.html
@@ -29,7 +29,7 @@ limitations under the License.
 				<div class="form-group">
 					<div class="col-md-12">
 						<div class="dropdown" ng-click="myFunction()">
-							<button class="dropbtn"><span class="test" style="float:left;">{{value}}</span> <img class="arrow-down" src="/images/arrow-down.png"></button>
+							<button class="dropbtn"><span class="test" style="float:left;">{{value}}</span> <img class="arrow-down" src="/images/arrow-down_black.png"></button>
 							<div id="myDropdown" class="dropdown-content">
 								<a href="" ng-click="value = 'PIKA Weihenstephan'" value="abc">PIKA Weihenstephan</a>
 							</div>
