--- a/frontend/javascripts/app/views/experiment/melt-curve.html
+++ b/frontend/javascripts/app/views/experiment/melt-curve.html
@@ -25,7 +25,7 @@ limitations under the License.
             <div class="col-sm-6 curve-name">
               <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart">
                 Melt Curve
-                <img class="arrow-down" src="/images/arrow-down.png">
+                <img class="arrow-down" src="/images/arrow-down_black.png">
               </chart-chooser>
             </div>
             <div class="col-sm-6 ampli-toggles">
