--- a/frontend/javascripts/app/views/experiment/temperature-logs.html
+++ b/frontend/javascripts/app/views/experiment/temperature-logs.html
@@ -24,7 +24,7 @@
           <div class="col-sm-4 chart-name">
             <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart">
               Thermal Profile
-              <img class="arrow-down" src="/images/arrow-down.png">
+              <img class="arrow-down" src="/images/arrow-down_black.png">
             </chart-chooser>
           </div>
           <div class="col-sm-8 chart-controls">
