--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -229,7 +229,7 @@
         color: $gray;
         display: inline-block;
         margin-left: 15px;
-        font-weight: 700;
+        // font-weight: 700;
       }
       span.set-auto {
         color: $blue;
@@ -273,7 +273,7 @@
         color: $gray;
         display: inline-block;
         margin-left: 15px;
-        font-weight: 700;
+        // font-weight: 700;
         padding-right: 18px;
       }
       span.set-auto {
