fixed some features

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -53,7 +53,7 @@ limitations under the License.
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:27%; text-align: right; padding-right: 0px">
                   <div class="plot-option">
-                    <p style="font-size: 13pt;">Plot Type</p>
+                    <p style="font-size: 13pt; color:black;">Plot Type</p>
                     <form role="form" class="form-horizontal" name="plotType" style="font-size: 13pt" novalidate>
                       <div class="form-group">
                         <div class="col-md-12">
@@ -76,7 +76,7 @@ limitations under the License.
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:33%; text-align: right; padding-right: 40px">
                   <div class="plot-option">
-                    <p style="font-size: 13pt;">Color by</p>
+                    <p style="font-size: 13pt; color:black;">Color by</p>
                     <form role="form" class="form-horizontal" name="colorBy" style="font-size: 13pt" novalidate>
                       <div class="form-group">
                         <div class="col-md-12" style="padding-right: 10px;">
@@ -134,7 +134,7 @@ limitations under the License.
                 <div style="position: absolute; padding-top: 0px;">
                   <svg style="width: 40x; height: 40px;">
                     <g style="width: 40px; height: 40px;">
-                      <line x1=40 y1=5 x2=10 y2=40 stroke="grey" stroke-width=1></line>
+                      <line x1=40 y1=5 x2=10 y2=40 stroke="lightgrey" stroke-width=1></line>
                     </g>
                   </svg>
                 </div>
