--- a/frontend/javascripts/app/views/samples-targets.html
+++ b/frontend/javascripts/app/views/samples-targets.html
@@ -38,29 +38,29 @@ limitations under the License.
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 samples" full-height force="true" offset="144" style="padding-left: 70px !important;">
         <p>Samples</p>
 
-        <table fixed-header class="sample-target-table">
+        <table fixed-header class="sample-target-table sample-table">
             <thead>
-                <tr style="border-bottom:1px solid #bbb;">
-                    <th width="40%">Name</th>
-                    <th width="20%"></th>
-                    <th class="text-center" width="40%">Color</th>
+                <tr>
+                    <th width="70%">Name</th>
+                    <th class="text-right" width="10%"></th>
+                    <th class="text-center" width="20%">Color</th>
                     <th class="text-center" width="50px"></th>
                 </tr>
             </thead>
           <tbody>
             <tr ng-repeat="rowContent in rows track by $index">
                 <td style="border-bottom:1px solid #bbb;">
-                    <input style="border:0px;padding:0px;outline: none;width:100%;" type="text" ng-blur="updateSample(rowContent.id,rowContent.name,$index)" ng-focus="focusSample(rowContent.id,rowContent.name,$index)" placeholder="Enter Sample Name" class="" ng-model="rowContent.name">
+                    <input style="border:0px;padding:0px;outline: none;width:100%;" type="text" ng-blur="updateSample(rowContent, $index)" ng-focus="focusSample(rowContent, $index)" placeholder="Enter Sample Name" class="" ng-model="rowContent.name">
                 </td>
                 <td style="border-bottom:1px solid #bbb;" class="text-center">
                     <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="rowContent.assigned">
                 </td>
                 <td style="border-bottom:1px solid #bbb;" class="text-center">
-                    <span class="color" ng-attr-style="background-color:{{colors[rowContent.id % 16]}};display:inline-block;width:20px;height:20px;border-radius:3px;"></span>
+                    <span class="color" ng-attr-style="background-color:{{colors[$index % 16]}};display:inline-block;width:20px;height:20px;border-radius:3px;"></span>
                 </td>
                 <td style="text-align:center; padding: 0;" class="text-center" >
                     <span ng-show="!rowContent.confirmDelete" ng-click="confirmDeleteSample(rowContent)"><img class="delete" src="/images/trash_initial.svg" alt=""></span>
-                    <span ng-show="rowContent.confirmDelete" ng-click="deleteSample(rowContent, $event)"><img class="delete-confirm" src="/images/confirm_trash.svg" alt=""></span>
+                    <span ng-show="rowContent.confirmDelete" ng-click="deleteSample(rowContent, $index)"><img class="delete-confirm" src="/images/confirm_trash.svg" alt=""></span>
                 </td>
             </tr>
           </tbody>
@@ -73,12 +73,12 @@ limitations under the License.
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 targets" full-height force="true" offset="144">
         <p>Targets</p>
 
-        <table fixed-header class="sample-target-table">
+        <table fixed-header class="sample-target-table target-table">
             <thead>
-                <tr style="border-bottom:1px solid #bbb;">
+                <tr>
                     <th width="50%">Name</th>
-                    <th class="text-center" width="15%">Ch.</th>
-                    <th class="text-center" width="15%"></th>
+                    <th class="text-center" width="20%">Ch.</th>
+                    <th class="text-center" width="10%"></th>
                     <th class="text-center" width="20%">Color</th>
                     <th width="50px"></th>
                 </tr>
@@ -86,27 +86,27 @@ limitations under the License.
           <tbody>
             <tr ng-repeat="targetContent in targets track by $index">
                 <td style="border-bottom:1px solid #bbb;">
-                    <input style="border:0px;padding:0px;width:100%;outline: none;" type="text" ng-blur="updateTargetName(targetContent.id,targetContent.name,$index)" ng-focus="focusTarget(targetContent.id,targetContent.name,$index)" placeholder="Enter Target Name"  class="" ng-model="targetContent.name">
+                    <input style="border:0px;padding:0px;width:100%;outline: none;" type="text" ng-blur="updateTargetName(targetContent,$index)" ng-focus="focusTarget(targetContent,$index)" placeholder="Enter Target Name"  class="" ng-model="targetContent.name">
                 </td>
                 <td style="border-bottom:1px solid #bbb; padding: 0 2px; width: 80px;" class="text-center">
                     <div ng-show="targetContent.selectChannel"  class="channel-selector">
-                        <span ng-click="updateTargetChannel(targetContent.id,1)" ng-class="{'select-channel-border':targetContent.channel == 1}">1</span>
-                        <span ng-click="updateTargetChannel(targetContent.id,2)" ng-class="{'select-channel-border':targetContent.channel == 2}">2</span>
+                        <span ng-click="updateTargetChannel(targetContent.id,1, $index)" ng-class="{'select-channel-border':targetContent.channel == 1}">1</span>
+                        <span ng-click="updateTargetChannel(targetContent.id,2, $index)" ng-class="{'select-channel-border':targetContent.channel == 2}">2</span>
                     </div>
                     <div ng-show="!targetContent.selectChannel"  class="cursor-channel">
                         <span ng-click="targetContent.selectChannel = !targetContent.selectChannel" style="text-decoration: underline; display: block;">{{targetContent.channel}}</span>
                     </div>
                 </td>
-                <td style="border-bottom:1px solid #bbb;width:70px;" class="text-right">
+                <td style="border-bottom:1px solid #bbb;" class="text-right">
                     <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="targetContent.assigned">
                     <img class="lock-icon" src="/images/lock.svg" alt="" ng-show="targetContent.imported">
                 </td>
-                <td style="border-bottom:1px solid #bbb; width:60px; " class="text-center">
-                    <span class="color" ng-attr-style="background-color:{{colors[targetContent.id % 16]}};display:inline-block;width:20px;height:20px;border-radius:3px;"></span>
+                <td style="border-bottom:1px solid #bbb;" class="text-center">
+                    <span class="color" ng-attr-style="background-color:{{colors[$index % 16]}};display:inline-block;width:20px;height:20px;border-radius:3px;"></span>
                 </td>
                 <td style="text-align:center;padding: 0;" class="text-center">
                     <span ng-show="!targetContent.confirmDelete" ng-click="confirmDeleteTarget(targetContent)"><img class="delete" src="/images/trash_initial.svg" alt=""></span>
-                    <span ng-show="targetContent.confirmDelete" ng-click="deleteTarget(targetContent, $event)"><img class="delete-confirm" src="/images/confirm_trash.svg" alt=""></span>
+                    <span ng-show="targetContent.confirmDelete" ng-click="deleteTarget(targetContent, $index)"><img class="delete-confirm" src="/images/confirm_trash.svg" alt=""></span>
                 </td>
             </tr>
           </tbody>
