fixed shadow effect and resize magnifier tools

--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -235,7 +235,8 @@
       // display: inline-block;
       // width: 85%;
       float: left;
-      box-shadow: 3px 3px 7px 1px grey;
+      box-shadow: 0 1pt 1pt 1px grey;
+      
       // height: 100%;
     }
     .additional-info {
