--- a/frontend/stylesheets/directives/menu-overlay.css.scss
+++ b/frontend/stylesheets/directives/menu-overlay.css.scss
@@ -200,6 +200,9 @@ $sidemenu_width: 352px;
     margin-right: 0;
     -webkit-transition: margin 0.3s; /* Safari */
     transition: margin 0.3s;
+    position: fixed;
+    height: 100%;
+
   }
 
   &.sidemenu-open-remove {
@@ -399,6 +402,7 @@ $sidemenu_width: 352px;
     .page-container {
       top: 0;
       left: 0;
+      height:100%;
     }
 
     .content-overlay {
