--- a/frontend/stylesheets/run-experiment.scss
+++ b/frontend/stylesheets/run-experiment.scss
@@ -1,7 +1,7 @@
 .run-experiment-state-active {
   min-width: 1205px;
   .chart-screens-container {
-    min-height: 400px;
+    // min-height: 400px;
     .chart-error {
       position: absolute;
       left: 0;
