--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -16,9 +16,9 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<div class="amplification-chart-state-active results-charts">
-  <div class="page-layout" ng-controller="AmplificationChartCtrl" ng-show="experiment">
-    <div class="content row" style="padding-top:0px;">
+<div class="amplification-chart-state-active results-charts" style="height: 100%;">
+  <div class="page-layout" ng-controller="AmplificationChartCtrl" ng-show="experiment" style="height: 100%;">
+    <div class="content row" style="padding-top:0px; height: 100%;" >
       <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6" offset="0" force="true" full-height style="padding-left: 0px; padding-right: 0px; display: flex; flex-direction: column; justify-content: space-between; background: #eeeeee">
         <div>
             <!--curve-header-->
