--- a/frontend/javascripts/app/views/experiment/run-experiment.html
+++ b/frontend/javascripts/app/views/experiment/run-experiment.html
@@ -18,8 +18,8 @@
 -->
 <div ng-controller="RunExperimentCtrl">
   <div menu-overlay sidemenu-template="app/views/experiment/left-menu.html">
-    <div full-height offset="37">
-      <header-status experiment-id="experiment.id" style="height:4vh;">
+    <div full-height offset="37" style="display: flex; flex-direction: column;">
+      <header-status experiment-id="experiment.id">
         <div class="stripes-and-name" toggle-sidemenu>
           <div class="stripes">
             <div class="stripe"></div>
@@ -28,17 +28,17 @@
           </div>
         </div>
       </header-status>
-      <div class="chart-screens-container" style="height:92vh;">
-        <div ng-show="chart === 'amplification'" ng-include src="'app/views/experiment/amplification-chart.html'">
+      <div class="chart-screens-container" style="flex-grow: 1; position: relative;">
+        <div ng-show="chart === 'amplification'" style="position:absolute; width: 100%; height: 100%;" ng-include src="'app/views/experiment/amplification-chart.html'">
         </div>
-        <div ng-show="chart === 'standard-curve'" ng-include src="'app/views/experiment/standard-curve.html'">
+        <div ng-show="chart === 'standard-curve'" style="position:absolute; width: 100%; height: 100%;" ng-include src="'app/views/experiment/standard-curve.html'">
         </div>
-        <div ng-show="chart === 'temperature-logs'" ng-include src="'app/views/experiment/temperature-logs.html'">
+        <div ng-show="chart === 'temperature-logs'" style="position:absolute; width: 100%; height: 100%;" ng-include src="'app/views/experiment/temperature-logs.html'">
         </div>
-        <div ng-show="chart === 'melt-curve'" ng-include src="'app/views/experiment/melt-curve.html'">
+        <div ng-show="chart === 'melt-curve'" style="position:absolute; width: 100%; height: 100%;" ng-include src="'app/views/experiment/melt-curve.html'">
         </div>
       </div>
     </div>
-    <status-bar experiment-id="experiment.id" style="height:4vh;"></status-bar>
+    <status-bar experiment-id="experiment.id"></status-bar>
   </div>
 </div>
