--- a/frontend/javascripts/app/views/samples-targets.html
+++ b/frontend/javascripts/app/views/samples-targets.html
@@ -53,7 +53,12 @@ limitations under the License.
                     <input style="border:0px;padding:0px;outline: none;width:100%;" type="text" ng-blur="updateSample(rowContent, $index)" ng-focus="focusSample(rowContent, $index)" placeholder="Enter Sample Name" class="" ng-model="rowContent.name">
                 </td>
                 <td style="border-bottom:1px solid #bbb;" class="text-center">
-                    <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="rowContent.assigned">
+                    <label class="icon-wrapper">
+                        <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="rowContent.assigned">
+                        <div class="assigned-description">
+                            <span>Assigned to Well(s)</span>
+                        </div>                      
+                    </label>
                 </td>
                 <td style="border-bottom:1px solid #bbb;" class="text-center">
                     <span class="color" ng-attr-style="background-color:{{colors[$index % 16]}};display:inline-block;width:20px;height:20px;border-radius:3px;"></span>
@@ -98,7 +103,12 @@ limitations under the License.
                     </div>
                 </td>
                 <td style="border-bottom:1px solid #bbb;" class="text-right">
-                    <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="targetContent.assigned">
+                    <label class="icon-wrapper">
+                        <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="targetContent.assigned">
+                        <div class="assigned-description">
+                            <span>Assigned to Well(s)</span>
+                        </div>                      
+                    </label>
                     <img class="lock-icon" src="/images/lock.svg" alt="" ng-show="targetContent.imported">
                 </td>
                 <td style="border-bottom:1px solid #bbb;" class="text-center">
