--- a/frontend/javascripts/app/views/experiment/experiment-properties-name.html
+++ b/frontend/javascripts/app/views/experiment/experiment-properties-name.html
@@ -17,14 +17,17 @@
     limitations under the License.
 -->
 <div class="side-menu-exp-name H1">
+  <div class="side-top-header">    
+    <label>Experiment Name</label>  
+    <span class="edit-experiment-name" ng-click="focusExpName()" ng-show="!editExpNameMode">Edit</span>
+  </div>
   <form name="expForm">
-
     <div class="exp-name-container">
-      <span class="exp-name H1 truncate" ng-click="focusExpName()" ng-show="!editExpNameMode">
+      <span class="exp-name H1 truncate" ng-show="!editExpNameMode">
         {{experiment.name | truncate:20}}
       </span>
       <input type="text" class="exp-name H1" required ng-model="experiment.name" ng-show="editExpNameMode" ng-blur="saveExperiment()"
-        on-key-enter="saveExperiment(exp)" focus-on="editExpNameMode">
+        on-key-enter="saveExperiment(exp)" focus-on="editExpNameMode" id="exp_name_field">
     </div>
 
     <div class="text-center message-container">
